policy/opa-exporter/deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: _
  labels:
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Service
metadata:
  name: opa-exporter
  labels:
    app.kubernetes.io/name: opa-exporter
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: opa-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-exporter
  labels:
    app.kubernetes.io/name: opa-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opa-exporter
      app.kubernetes.io/instance: opa-gatekeeper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opa-exporter
        app.kubernetes.io/instance: opa-gatekeeper
    spec:
      serviceAccountName: opa-exporter
      containers:
      - name: opa-exporter
        image: docker.io/tomkukral/opa-exporter:latest
        imagePullPolicy: IfNotPresent
        args:
        - /opa-exporter
        - --config
        - /config.yaml
        ports:
        - containerPort: 9141
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 150m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ALL]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: configuration-file
          mountPath: /config.yaml
          subPath: configuration-file
      volumes:
      - name: configuration-file
        configMap:
          name: opa-exporter-config
