policy/opa-exporter/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    # kubernetes.default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - port: 443
      protocol: TCP
  #- to:
  #  - ipBlock:
  #      # TODO: use namespace
  #      cidr: fd08::1/128
  #  ports:
  #  - port: 443
  #    protocol: TCP
